tests/ui/async-await/issue-68523.stderr
error[E0752]: `main` function is not allowed to be `async`
  --> $DIR/issue-68523.rs:3:1
   |
LL | async fn main() -> Result<i32, ()> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `main` function is not allowed to be `async`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0752`.
